--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "lint": "next lint",
     "start": "next start",
-    "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -21,6 +20,8 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "soukai": "^0.5.1",
+    "soukai-solid": "^0.5.1",
     "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.0",
     "typescript": "^5.0.4",
